--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.whowe-bg {
+  background: rgb(206, 25, 49);
+  background: linear-gradient(
+    90deg,
+    rgba(206, 25, 49, 1) 0%,
+    rgba(126, 23, 31, 1) 100%
+  );
+}
