--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -47,4 +47,7 @@
   .banner-btn {
     @apply mt-6 rounded-lg border-2 border-red-700 bg-white py-2 px-4 text-2xl font-bold text-red-700 transition-all ease-in hover:bg-red-700 hover:text-white;
   }
+  .dashboard-btn {
+    @apply rounded border-2 border-indigo-500 bg-indigo-500 py-2 px-4 font-semibold  text-white transition-all hover:border-2 hover:bg-white hover:text-indigo-500;
+  }
 }
