file uploading done and waiting for server deployment

--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -4,9 +4,20 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* body {
+body {
   font-family: "Poppins", sans-serif;
-} */
+}
+@layer components {
+  .main-container {
+    @apply mx-5 max-w-full lg:mx-auto lg:max-w-6xl;
+  }
+  .banner-btn {
+    @apply mt-6 rounded-lg border-2 border-red-700 bg-white py-2 px-4 text-2xl font-bold text-red-700 transition-all ease-in hover:bg-red-700 hover:text-white;
+  }
+  .dashboard-btn {
+    @apply rounded border-2 border-indigo-500 bg-indigo-500 py-2 px-4 font-semibold  text-white transition-all hover:border-2 hover:bg-white hover:text-indigo-500;
+  }
+}
 
 .banner-bg {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -40,14 +51,97 @@
     rgba(126, 23, 31, 1) 100%
   );
 }
-@layer components {
-  .main-container {
-    @apply mx-5 max-w-full lg:mx-auto lg:max-w-6xl;
+
+/* 404 page */
+
+#notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  line-height: 1.4;
+  text-align: center;
+}
+
+.notfound .notfound-404 {
+  position: relative;
+  height: 240px;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: "Montserrat", sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 252px;
+  font-weight: 900;
+  margin: 0px;
+  color: #262626;
+  text-transform: uppercase;
+  letter-spacing: -40px;
+  margin-left: -20px;
+}
+
+.notfound .notfound-404 h1 > span {
+  text-shadow: -8px 0px 0px #fff;
+}
+
+.notfound .notfound-404 h3 {
+  font-family: "Cabin", sans-serif;
+  position: relative;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #262626;
+  margin: 0px;
+  letter-spacing: 3px;
+  padding-left: 6px;
+}
+
+.notfound h2 {
+  font-family: "Cabin", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #000;
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+
+@media only screen and (max-width: 767px) {
+  .notfound .notfound-404 {
+    height: 200px;
   }
-  .banner-btn {
-    @apply mt-6 rounded-lg border-2 border-red-700 bg-white py-2 px-4 text-2xl font-bold text-red-700 transition-all ease-in hover:bg-red-700 hover:text-white;
+  .notfound .notfound-404 h1 {
+    font-size: 200px;
   }
-  .dashboard-btn {
-    @apply rounded border-2 border-indigo-500 bg-indigo-500 py-2 px-4 font-semibold  text-white transition-all hover:border-2 hover:bg-white hover:text-indigo-500;
+}
+
+@media only screen and (max-width: 480px) {
+  .notfound .notfound-404 {
+    height: 162px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 162px;
+    height: 150px;
+    line-height: 162px;
+  }
+  .notfound h2 {
+    font-size: 16px;
   }
 }
