--- a/src/pages/Product/styles/Product.css
+++ b/src/pages/Product/styles/Product.css
@@ -30,10 +30,10 @@
   object-fit: cover;
 }
 
-.swiper-button-next,
+/* .swiper-button-next,
 .swiper-button-prev {
   display: none;
-}
+} */
 
 .swiper-pagination-bullet {
   display: none;
